--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "recharts": "^2.1.8",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
