--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-slick": "^0.28.1",
     "recharts": "^2.1.8",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.4.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
