--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.4",
     "react-router-dom": "^5.2.0",
