--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "aos": "^2.3.4",
     "axios": "^0.21.4",
     "crypto": "^1.0.1",
+    "file-saver": "^2.0.5",
     "react": "^17.0.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
@@ -24,7 +26,8 @@
     "recharts": "^2.1.8",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
